# kiibohd-firmware

./: Cargo.toml  README.md
common/: build.rs  common_makefile.toml
common/cargo/: config_atsam4s8b_nobootloader  config_nrf5833
hexgears/gemini/: Cargo.toml  build.rs  project.env  scancode_map.kll
hexgears/gemini/src/: bin.rs  constants.rs  hidio.rs
inputclub/keyboards/keystone/tkl/: Cargo.toml  project.env
inputclub/keyboards/keystone/tkl/src/: bin.rs  constants.rs  hidio.rs
inputclub/keyboards/wz/: .gdbinit  Cargo.toml  Makefile.toml  README.md  build.rs  project.env  scancode_map.kll
inputclub/keyboards/wz/.cargo/: config
inputclub/keyboards/wz/src/: bin.rs  main.rs
