[workspace]
members = [
    "common/xtask",
    "hexgears/gemini",
    "inputclub/keyboards/keystone/tkl",
]

[patch.crates-io]
kll-core = { path = "../kiibohd-core/kll-core" }
kll-hid = { path = "../kiibohd-core/kll-hid" }
kiibohd-keyscanning = { path = "../kiibohd-core/kiibohd-keyscanning" }
kiibohd-hall-effect-keyscanning = { path = "../kiibohd-core/kiibohd-hall-effect-keyscanning" }
kiibohd-usb = { path = "../kiibohd-core/kiibohd-usb" }
kiibohd-hid-io = { path = "../kiibohd-core/kiibohd-hid-io" }
hid-io-protocol = { path = "../hid-io-protocol" }
is31fl3743b = { path = "../kiibohd-core/is31fl3743b" }
usb-device = { path = "../usb-device" }

[patch."https://github.com/haata/usb-device.git"]
usb-device = { path = "../usb-device" }

[patch."https://github.com/haata/usbd-hid.git"]
usbd-hid = { path = "../usbd-hid" }

[patch."https://github.com/haata/atsam4-hal.git"]
atsam4-hal = { path = "../atsam4-hal" }

# XXX Important when using gdb XXX
# NOTE: Comment this section out when using gdb for a better experience
#       Will increase binary size considerably though.
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
