[package]
name = "wz"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Input Club - wz"
keywords = ["arm", "cortex-m", "nrf52", "nrf52833", "hal", "ble", "usb"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[dependencies]
const_env = "0.1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
cortex-m-rtic = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.3"
embedded-hal = "0.2.7"
heapless = "0.7"
kiibohd-hid-io = { version = "0.1.0", git = "https://github.com/kiibohd/kiibohd-core.git" }
kiibohd-keyscanning = { version = "0.1.0", git = "https://github.com/kiibohd/kiibohd-core.git", features = ["kll-core"] }
kiibohd-usb = { version = "0.1.0", git = "https://github.com/kiibohd/kiibohd-core.git", default-features = false, features = ["hidio", "defmt-default", "kll-core"] }
kll-core = { version = "0.1.0", git = "https://github.com/kiibohd/kiibohd-core.git" }
nb = "~0.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
paste = "1.0"

panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"

[dependencies.nrf52833-hal]
git = "https://github.com/haata/nrf-hal.git"
version = "0.15.0"

[build-dependencies]
dotenv = "0.15"
kll-compiler = { git = "https://github.com/kiibohd/kiibohd-core.git" }
vergen = { git = "https://github.com/haata/vergen", version = "7.0", default-features = false, features = ["git"] }

[features]
default = [
    "defmt-default",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
