[package]
name = "wz"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Input Club - wz"
keywords = ["arm", "cortex-m", "nrf52", "nrf52833", "hal", "ble", "usb"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[dependencies]
alloc-cortex-m = "0.4"
const_env = "0.1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
cortex-m-rtic = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.3"
embassy = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", features = ["nrf52833", "defmt", "unstable-pac", "nightly"] }
embedded-hal = "0.2.7"
heapless = "0.7"
kiibohd-hid-io = { version = "0.1.0" }
kiibohd-keyscanning = { version = "0.1.0", features = ["kll-core"] }
kiibohd-usb = { version = "0.1.0", default-features = false, features = ["hidio", "defmt-default", "kll-core"] }
kll-core = { version = "0.1.0" }
nb = "~0.1"
nrf-softdevice = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice.git", default-features = false, features = ["nrf52833", "s113", "ble-peripheral", "ble-gatt"] }
nrf-softdevice-defmt-rtt = { version = "0.1.0", git = "https://github.com/embassy-rs/nrf-softdevice.git" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
paste = "1.0"
usb-device = "0.2.7"
void = { version = "1.0.2", default-features = false }

[dependencies.nrf52833-hal]
git = "https://github.com/haata/nrf-hal.git"
version = "0.15.0"

[build-dependencies]
dotenv = "0.15"
kll-compiler = { git = "https://github.com/kiibohd/kiibohd-core.git" }
vergen = { version = "7.2", default-features = false, features = ["git"] }

[features]
default = [
    "defmt-default",
]

defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
