[package]
name = "keystonetkl"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
description = "Input Club - Keystone - Tenkeyless analog keyboard firmware"
keywords = ["arm", "cortex-m", "atsam4", "atsam4s", "atsam4s8b", "hal"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kiibohd/kiibohd-firmware"

[lib]
path = "src/lib.rs"

[[bin]]
name = "keystonetkl"
path = "src/bin.rs"

[dependencies]
const_env = "0.1"
cortex-m = "0.7"
cortex-m-rt = { version = "0.7" }
cortex-m-rtic = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.3"
dwt-systick-monotonic = "1.0"
embedded-hal = "0.2.7"
fugit = { version = "0.3", features = ["defmt"] }
heapless = "0.7"
is31fl3743b = "0.1"
kiibohd-hall-effect-keyscanning = { version = "0.1", features = ["kll-core", "defmt"] }
kiibohd-hid-io = { version = "0.1", features = ["defmt"] }
kiibohd-usb = { version = "0.1", features = ["kll-core", "defmt"] }
kll-core = { version = "0.1", default-features = false, features = ["defmt"] }
nb = "~0.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
paste = "1.0"

[dependencies.atsam4-hal]
git = "https://github.com/haata/atsam4-hal.git"
version = "0.2.1"
default-features = false
features = ["atsam4s8b", "usb"]

[build-dependencies]
dotenv = "0.15"
kll-compiler = "0.1"
vergen = { version = "7.1", default-features = false, features = ["git"] }
